--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
 
   <meta charset="utf-8">
-  <title>Cycling Dashboard</title>
+  <title>Cycling UI Dashboard</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
